# ds-ecommerce-olist

./: .gitignore  README.md  main.py  pyproject.toml
abt/: create_abt.sql  generate_abt_sellers_table.py
features_store/: create_cohort.sql  first_cohort.sql  generate_features_store_table.py
model/: abt_churn.sql  model_churn.py
models/: abt_churn.sql  model_churn.py  model_churn_exp.py
sql_data_preparation/: sellers_features_store.sql  tb_customers.sql  tb_leads_closed.sql  tb_order_items.sql  tb_order_payments.sql  tb_order_reviews.sql  tb_orders.sql  tb_products.sql  tb_sellers.sql
