[project]
name = "ds-ecommerce-olist"
version = "0.1.0"
description = "End-to-end Data Science project based on e-commerce data from Brazil (by Olist)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.2",
    "scikit-learn>=1.7.1",
    "sqlalchemy>=2.0.43",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=3.13.2",
]